--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "repository": "github:OlsonDev/LinkPig",
+  "publisher": "OlsonDev",
   "engines": {
     "vscode": "^1.107.0"
   },
